2002-09-27  Martin Weber <martweb@gmx.net>

	* pxl-outline.c (find_centerline_pixels): During speed up 
	the code I introduced a bug. Here the fix. 

	Message-ID: <3D94C2E7.55A7C0C3@gmx.net>.

2002-09-26  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.m4 ($LIBS): changed the order of appending
	$LIBS to $AUTOTRACE_LIBS.

	* Makefile.am (EXTRA_DIST): Added output-pstoedit.[ch].

	* configure.in (HAVE_LIBPSTOEDIT): Fix typo.
	
2002-09-26  Martin Weber <martweb@gmx.net>

	* vector.c: Now also works with C compilers that do not define true and false in the
	standard way,

	* pxl-outline.c: Ditto.

	* output.c: Ditto.

	* fit.c: Ditto.

	* epsilon-equal.c: Ditto.

	Message-ID: <8293.1032936123@www49.gmx.net>.

2002-09-25  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: use pstoedit.m4 instead of pkg-config. 
	showed more message about pstoedit.
	
2002-09-21  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: added -dl to LIBPSTOEDIT_LIBS.

2002-09-20  Martin Weber <martweb@gmx.net>

	* output-er.c: corrected output format.

	* pxl-outline.c: improved speed.

	Message-ID: <3D89F00F.E3F18E48@gmx.net>

2002-09-20  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.m4: did the same as frontline.m4.
	$autotrace_exec_prefix or $autotrace_prefix only.
	$autotrace_config_exec_prefix and $autotrace_config_prefix are 
	unnecessary variables. 

	used --exec_prefix instead of --exec-prefix. This is restriction
	of autofig. Fix broken a if-condition. Added "bin" to exec_prefix.

	(autotrace_config_args): removed. unnecessary variable.

2002-09-20  Martin Weber <martweb@gmx.net>

	* color.c (GET_COLOR): Improved speed and better luminance calculation.

	* color.h (COLOR_LUMINANCE): Ditto.

	Message-ID: <32434.1032418120@www62.gmx.net>

2002-09-20  Martin Weber <martweb@gmx.net>

	* thin-image.c (thin3): This fix corrects some problems 
	with the thinning of regions that touch the image borders.

	Message-ID: <3D88C750.4AE643A5@gmx.net>.
